fix: corrected clock timer overlapping problem with that of navbar

--- a/frontend/css/components/navbar.css
+++ b/frontend/css/components/navbar.css
@@ -193,6 +193,9 @@ body {
 /* When scrolled, main navbar moves to top */
 .navbar.scrolled {
   top: 0;
+  display:flex;
+  align-items:end;
+  height:105px;
 }
 
 /* Logo Styles - Fixed alignment */
@@ -509,7 +512,15 @@ left: 100%;
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
   background-color: #2b2b2b;
   z-index: 10001;
+  display:flex;
+  justify-content:center;
 }
+
+.dropdown-menu a{
+  padding-left:10px;
+
+}
+
 
 .dropdown-nav.active .dropdown-menu {
   opacity: 1;
