--- a/frontend/css/components/digital-clock.css
+++ b/frontend/css/components/digital-clock.css
@@ -1,7 +1,7 @@
 #mac-clock {
   position: fixed;
   top:  3px;
-  right: 20px;
+  right: 40px;
   font-size: 15px;
   font-weight: 500;
   color: #f5f5f7;
